# markets-assay

./: .env.example  .gitignore  Cargo.toml  README.md  project_summary.md
.lavish/: correlation-first-pipeline-design-review.html  correlation-first-pipeline-review.html  correlation-first-pipeline-spec.html  stage-1-curated-sample-plan.html
configs/: stage0_fixture.json  stage1_saved_sample.json  stage2_api.json
data/lexicons/: README.md
docs/superpowers/plans/: 2026-07-09-design-in-practice-skill.md  2026-07-09-stage-0-fixture-pipeline.md  2026-07-14-stage-1-real-sample.md  2026-07-14-stage-2-real-experiment.md
docs/superpowers/skill-tests/: 2026-07-09-design-in-practice-pressure-scenarios.md
fixtures/saved_sample/: README.md  alpaca_bars.json  gdelt_macro.json  massive_AAPL.json  massive_AMD.json  massive_AMZN.json  massive_AVGO.json  massive_DIA.json  massive_GOOGL.json  massive_IWM.json  massive_MSFT.json  massive_NVDA.json  massive_QQQ.json  massive_SPY.json  massive_TSLA.json
scripts/: fetch_sample.sh
skills/design-in-practice/: SKILL.md
src/: analysis.rs  audit.rs  backtest.rs  calendar.rs  cli.rs  config.rs  fixture.rs  ids.rs  lib.rs  main.rs  normalize.rs  observations.rs  pipeline.rs  report.rs  sentiment.rs  verdict.rs
src/domain/: article.rs  market.rs  mod.rs  observation.rs  run.rs
src/source/: fixture.rs  mod.rs  saved_files.rs
src/source/api/: http.rs  mod.rs
src/storage/: jsonl.rs  manifest.rs  mod.rs  parquet.rs
tests/: autocorrelation_null.rs  no_threshold_lookahead.rs  power_check.rs  stage0_cli.rs  stage1_real_sample.rs
(+16 files in other folders)
