[package]
name = "markets"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
arrow = "59.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.6", features = ["derive"] }
csv = "1"
hex = "0.4"
parquet = { version = "59.0", features = ["arrow"] }
plotters = { version = "0.3.7", default-features = false, features = ["line_series", "svg_backend"] }
serde = { version = "1", features = ["derive"] }
serde_arrow = { version = "0.14.2", features = ["arrow-59"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
